--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -6,16 +6,17 @@
 == Glossary ==
 
 || *Term* || *Meaning* ||
-|| Mission || A task given to a single unit. ||
+|| Mission || A task given to a elementary unit. ||
 || Operation || A combination of connected missions of different units. ||
+|| Battle || A combination of unconnected operations that take place at the same time and on the same map. ||
 
 = Details =
 
 == Functional requirments ==
 
-=== Air operations ===
-The air operations are simulated at the tactical level war. The units involved are of squadron and wing size. 
 
+=== Air operations ===
+The air operations are simulated at the tactical level of war. The elementary unit is the squadron. A squadron is given a mission. involved are of squadron and wing size. 
 
 ==== Mission types ====
 
@@ -23,7 +24,7 @@ The air operations are simulated at the tactical level war. The units involved a
 
 
 === Ground operations ===
-The ground operations are simulated at the operational level of war. The units involved are of battalion and division size.
+The ground operations are simulated at the operational level of war. The elementary unit is the battalion.
 
 
 === Squadron managment ===
@@ -56,6 +57,14 @@ The pilot can become the commanding officer of a squadron and can then influence
 
 === Campaign Creation ===
 
-=== Rapid release cycle ===
 
-=== Scalable performance ===
+=== Rapid release cycle ===
+New versions are released frequently.
+
+=== Scalability ===
+
+==== Performance ====
+Only the units that are involved in an operation are visible in the 3D engine. The amount of operations in each battle can be scaled to the available hardware.
+
+==== Aircraft, vehicles, statics, maps ====
+New Aircraft, vehicles, statics, maps can be added.
