--- a/wiki/Proposals.wiki
+++ b/wiki/Proposals.wiki
@@ -32,6 +32,8 @@ IL2 DCE proposals
 
 - new airplane types gradual infusion (new aircraft types entering service at certain dates might be in small number, replacing only part of a squadron's flights)
 
+- manual player request for transfer to another Geschwader
+
 - AI forcing (nearby bogey detection (based on pilots visual skill), dynamic attack waypoint addition (forcing AI to intercept, identify and attack bogey groups)
 
 - RRR system (repair/rearm/resupply) (if the player lands and taxies to certain locations/areas (close to a fuel cistern for example parked somewhere) on airfields, the script will move the player into a newly spawned aircraft and destroy the old landed one) - specially for online battles
