--- a/wiki/Proposals.wiki
+++ b/wiki/Proposals.wiki
@@ -13,17 +13,23 @@ IL2 DCE proposals
 
 - *delayed take off/spawning for escort/intercept missions*:
      + player is escort/intercept fighter: place the bombers on a calculated reach-point in their flight-path in which they are in range/detected and at the moment player's escort/intercept airplanes are spawned. this must also take account of bombers' already consumed fuel
+
      + player is bomber: delayed spawn (and take-off) for the AI escort/intercept planes (spawn them only when the bombers are in range/detected)
 
 - *AI ground control* / central command / master mind which should do all needed actions
      + generate recon/weather recon; CAPs; attacks + escorts; interceptions
+
      + deal with new situations
+
      + allow special players (admins/commanders) send commands to AI ground control)
 
 - *player commands*
      + online warsallow admin(s)/commander(s) player(s)/high single player rank:  create ground/see/air groups and assign them missions (to intercept incoming flights, to attack certain targets, to patrol certain areas, to escort certain flights)
+
      + report enemy sightings (for recon missions): quadrant, group type, size, composition, heading, altitude, speed
+
      + report bogey sightings and eventually change flight's current waypoint to investigate the newly sighted bogeys (force AI)
+
      + ask for help to (AI) ground control / central command (which should spawn more flights to deal with the wrongly asserted situation)
 
 - *customized radar/ground control* (radars which are not 100% right (altitude, number of planes, directions, etc)
@@ -52,3 +58,5 @@ IL2 DCE proposals
 - *AI forcing* (nearby bogey detection (based on pilots visual skill), dynamic attack waypoint addition (forcing AI to intercept, identify and attack bogey groups)
 
 - *RRR system* (repair/rearm/resupply) (if the player lands and taxies to certain locations/areas (close to a fuel cistern for example parked somewhere) on airfields, the script will move the player into a newly spawned aircraft and destroy the old landed one) - specially for online battles
+
+- dynamic weather generator (at this moment, it might be possible to change weather conditions IF the new weather conditions from a newly loaded missions during the current one are overwriting/replacing the initial missions's weather characteristics)
