--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -39,20 +39,10 @@ This campaign type is recommended for historical campaigns.
 
 == Use cases ==
 
-TODO
-
+|| *Use case* || ||
+|| *Description* || ||
 
 = Details =
-
-== Glossary ==
-
-|| *Term* || *Meaning* ||
-|| Mission || The task given to a elementary unit. ||
-|| Primary mission || The mission that is the main goal of the operation. ||
-|| Secondary mission || A mission that supports the main goal of the operation. ||
-|| Opposing mission || A mission that tries to prevent the achievment of the main goal of the operation. ||
-|| Operation || The combination of a primary mission and optionally secondary missions and opposing missions of different units. ||
-|| Battle || A closed set of one or more operations that take place at the same map. ||
 
 == Functional requirments ==
 
