Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -39,7 +39,7 @@ This campaign type is recommended for historical campaigns.
 
 == Use cases ==
 
-|| *Use case* || ||
+|| *Title* || ||
 || *Description* || ||
 
 = Details =
